cmake_minimum_required(VERSION 2.6)
project(osg3bg)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")

find_package(OpenThreads REQUIRED)
find_package(osgDB REQUIRED)
find_package(osgGA REQUIRED)
find_package(osg REQUIRED)
find_package(osgText REQUIRED)
find_package(osgUtil REQUIRED)
find_package(osgViewer REQUIRED)

macro(link_to_library PROJNAME LIBNAME)
    include_directories(${${LIBNAME}_INCLUDE_DIR})
    target_link_libraries(${PROJNAME} ${${LIBNAME}_LIBRARY})
endmacro()

macro(add_executable_with_core_libraries EXECUTABLE)
    add_executable(${EXECUTABLE} ${EXECUTABLE}.cpp)
    link_to_library(${EXECUTABLE} OPENTHREADS)
    link_to_library(${EXECUTABLE} OSG)
    link_to_library(${EXECUTABLE} OSGDB)
    link_to_library(${EXECUTABLE} OSGUTIL)
    link_to_library(${EXECUTABLE} OSGVIEWER)
endmacro()

add_subdirectory(ch1)
add_subdirectory(ch3)
add_subdirectory(ch4)
add_subdirectory(ch5)
add_subdirectory(ch6)
add_subdirectory(ch7)
add_subdirectory(ch9)
add_subdirectory(ch11)
