add_executable(ch3_1 ch3_1.cpp)
link_to_library(ch3_1 OPENTHREADS)
link_to_library(ch3_1 OSG)
link_to_library(ch3_1 OSGDB)
link_to_library(ch3_1 OSGUTIL)
link_to_library(ch3_1 OSGVIEWER)

add_executable(ch3_2 ch3_2.cpp)
link_to_library(ch3_2 OPENTHREADS)
link_to_library(ch3_2 OSG)
link_to_library(ch3_2 OSGDB)
link_to_library(ch3_2 OSGUTIL)
link_to_library(ch3_2 OSGVIEWER)

add_executable(ch3_3 ch3_3.cpp)
link_to_library(ch3_3 OPENTHREADS)
link_to_library(ch3_3 OSG)
link_to_library(ch3_3 OSGDB)
link_to_library(ch3_3 OSGUTIL)
link_to_library(ch3_3 OSGVIEWER)

add_executable(ch3_4 ch3_4.cpp)
link_to_library(ch3_4 OPENTHREADS)
link_to_library(ch3_4 OSG)
link_to_library(ch3_4 OSGDB)
link_to_library(ch3_4 OSGUTIL)
link_to_library(ch3_4 OSGVIEWER)

add_executable(ch3_5 ch3_5.cpp)
link_to_library(ch3_5 OPENTHREADS)
link_to_library(ch3_5 OSG)
link_to_library(ch3_5 OSGDB)
link_to_library(ch3_5 OSGUTIL)
link_to_library(ch3_5 OSGVIEWER)
