add_executable(ch4_1 ch4_1.cpp)
link_to_library(ch4_1 OPENTHREADS)
link_to_library(ch4_1 OSG)
link_to_library(ch4_1 OSGDB)
link_to_library(ch4_1 OSGUTIL)
link_to_library(ch4_1 OSGVIEWER)

add_executable(ch4_2 ch4_2.cpp)
link_to_library(ch4_2 OPENTHREADS)
link_to_library(ch4_2 OSG)
link_to_library(ch4_2 OSGDB)
link_to_library(ch4_2 OSGUTIL)
link_to_library(ch4_2 OSGVIEWER)

add_executable(ch4_3 ch4_3.cpp)
link_to_library(ch4_3 OPENTHREADS)
link_to_library(ch4_3 OSG)
link_to_library(ch4_3 OSGDB)
link_to_library(ch4_3 OSGUTIL)
link_to_library(ch4_3 OSGVIEWER)

add_executable(ch4_4 ch4_4.cpp)
link_to_library(ch4_4 OPENTHREADS)
link_to_library(ch4_4 OSG)
link_to_library(ch4_4 OSGDB)
link_to_library(ch4_4 OSGUTIL)
link_to_library(ch4_4 OSGVIEWER)

add_executable(ch4_5 ch4_5.cpp)
link_to_library(ch4_5 OPENTHREADS)
link_to_library(ch4_5 OSG)
link_to_library(ch4_5 OSGDB)
link_to_library(ch4_5 OSGUTIL)
link_to_library(ch4_5 OSGVIEWER)

find_package(glut REQUIRED)
add_executable(ch4_6 ch4_6.cpp)
link_to_library(ch4_6 GLUT)
link_to_library(ch4_6 OPENTHREADS)
link_to_library(ch4_6 OSG)
link_to_library(ch4_6 OSGDB)
link_to_library(ch4_6 OSGUTIL)
link_to_library(ch4_6 OSGVIEWER)
