add_executable_with_core_libraries(ch4_1)
add_executable_with_core_libraries(ch4_2)
add_executable_with_core_libraries(ch4_3)
add_executable_with_core_libraries(ch4_4)
add_executable_with_core_libraries(ch4_5)

find_package(FreeGLUT REQUIRED)
add_executable_with_core_libraries(ch4_6)
link_to_library(ch4_6 FREEGLUT)
