add_executable(ch5_1 ch5_1.cpp)
link_to_library(ch5_1 OPENTHREADS)
link_to_library(ch5_1 OSG)
link_to_library(ch5_1 OSGDB)
link_to_library(ch5_1 OSGUTIL)
link_to_library(ch5_1 OSGVIEWER)

add_executable(ch5_2 ch5_2.cpp)
link_to_library(ch5_2 OPENTHREADS)
link_to_library(ch5_2 OSG)
link_to_library(ch5_2 OSGDB)
link_to_library(ch5_2 OSGUTIL)
link_to_library(ch5_2 OSGVIEWER)

#add_executable(ch5_3 ch5_3.cpp)
#link_to_library(ch5_3 OPENTHREADS)
#link_to_library(ch5_3 OSG)
#link_to_library(ch5_3 OSGDB)
#link_to_library(ch5_3 OSGUTIL)
#link_to_library(ch5_3 OSGVIEWER)

#add_executable(ch5_4 ch5_4.cpp)
#link_to_library(ch5_4 OPENTHREADS)
#link_to_library(ch5_4 OSG)
#link_to_library(ch5_4 OSGDB)
#link_to_library(ch5_4 OSGUTIL)
#link_to_library(ch5_4 OSGVIEWER)

#add_executable(ch5_5 ch5_5.cpp)
#link_to_library(ch5_5 OPENTHREADS)
#link_to_library(ch5_5 OSG)
#link_to_library(ch5_5 OSGDB)
#link_to_library(ch5_5 OSGUTIL)
#link_to_library(ch5_5 OSGVIEWER)

#find_package(FreeGLUT REQUIRED)
#add_executable(ch5_6 ch5_6.cpp)
#link_to_library(ch5_6 FREEGLUT)
#link_to_library(ch5_6 OPENTHREADS)
#link_to_library(ch5_6 OSG)
#link_to_library(ch5_6 OSGDB)
#link_to_library(ch5_6 OSGUTIL)
#link_to_library(ch5_6 OSGVIEWER)
