add_executable(ch6_1 ch6_1.cpp)
link_to_library(ch6_1 OPENTHREADS)
link_to_library(ch6_1 OSG)
link_to_library(ch6_1 OSGDB)
link_to_library(ch6_1 OSGUTIL)
link_to_library(ch6_1 OSGVIEWER)

#add_executable(ch6_2 ch6_2.cpp)
#link_to_library(ch6_2 OPENTHREADS)
#link_to_library(ch6_2 OSG)
#link_to_library(ch6_2 OSGDB)
#link_to_library(ch6_2 OSGUTIL)
#link_to_library(ch6_2 OSGVIEWER)

#add_executable(ch6_3 ch6_3.cpp)
#link_to_library(ch6_3 OPENTHREADS)
#link_to_library(ch6_3 OSG)
#link_to_library(ch6_3 OSGDB)
#link_to_library(ch6_3 OSGUTIL)
#link_to_library(ch6_3 OSGVIEWER)

#add_executable(ch6_4 ch6_4.cpp)
#link_to_library(ch6_4 OPENTHREADS)
#link_to_library(ch6_4 OSG)
#link_to_library(ch6_4 OSGDB)
#link_to_library(ch6_4 OSGUTIL)
#link_to_library(ch6_4 OSGVIEWER)

#add_executable(ch6_5 ch6_5.cpp)
#link_to_library(ch6_5 OPENTHREADS)
#link_to_library(ch6_5 OSG)
#link_to_library(ch6_5 OSGDB)
#link_to_library(ch6_5 OSGUTIL)
#link_to_library(ch6_5 OSGVIEWER)

#add_executable(ch6_6 ch6_6.cpp)
#link_to_library(ch6_6 OPENTHREADS)
#link_to_library(ch6_6 OSG)
#link_to_library(ch6_6 OSGDB)
#link_to_library(ch6_6 OSGUTIL)
#link_to_library(ch6_6 OSGVIEWER)

#add_executable(ch6_7 ch6_7.cpp)
#link_to_library(ch6_7 OPENTHREADS)
#link_to_library(ch6_7 OSG)
#link_to_library(ch6_7 OSGDB)
#link_to_library(ch6_7 OSGUTIL)
#link_to_library(ch6_7 OSGVIEWER)
