add_executable(ch7_1 ch7_1.cpp)
link_to_library(ch7_1 OPENTHREADS)
link_to_library(ch7_1 OSG)
link_to_library(ch7_1 OSGDB)
link_to_library(ch7_1 OSGUTIL)
link_to_library(ch7_1 OSGVIEWER)

add_executable(ch7_2 ch7_2.cpp)
find_package(osgGA REQUIRED)
link_to_library(ch7_2 OSGGA)
link_to_library(ch7_2 OPENTHREADS)
link_to_library(ch7_2 OSG)
link_to_library(ch7_2 OSGDB)
link_to_library(ch7_2 OSGUTIL)
link_to_library(ch7_2 OSGVIEWER)

add_executable(ch7_3 ch7_3.cpp)
link_to_library(ch7_3 OPENTHREADS)
link_to_library(ch7_3 OSG)
link_to_library(ch7_3 OSGDB)
link_to_library(ch7_3 OSGUTIL)
link_to_library(ch7_3 OSGVIEWER)

add_executable(ch7_4 ch7_4.cpp)
link_to_library(ch7_4 OPENTHREADS)
link_to_library(ch7_4 OSG)
link_to_library(ch7_4 OSGDB)
link_to_library(ch7_4 OSGUTIL)
link_to_library(ch7_4 OSGVIEWER)

#add_executable(ch7_5 ch7_5.cpp)
#link_to_library(ch7_5 OPENTHREADS)
#link_to_library(ch7_5 OSG)
#link_to_library(ch7_5 OSGDB)
#link_to_library(ch7_5 OSGUTIL)
#link_to_library(ch7_5 OSGVIEWER)

#add_executable(ch7_6 ch7_6.cpp)
#link_to_library(ch7_6 OPENTHREADS)
#link_to_library(ch7_6 OSG)
#link_to_library(ch7_6 OSGDB)
#link_to_library(ch7_6 OSGUTIL)
#link_to_library(ch7_6 OSGVIEWER)

#add_executable(ch7_7 ch7_7.cpp)
#link_to_library(ch7_7 OPENTHREADS)
#link_to_library(ch7_7 OSG)
#link_to_library(ch7_7 OSGDB)
#link_to_library(ch7_7 OSGUTIL)
#link_to_library(ch7_7 OSGVIEWER)
