#add_executable(ch9_1 ch9_1.cpp)
#link_to_library(ch9_1 OPENTHREADS)
#link_to_library(ch9_1 OSG)
#link_to_library(ch9_1 OSGDB)
#link_to_library(ch9_1 OSGUTIL)
#link_to_library(ch9_1 OSGVIEWER)

#add_executable(ch9_2 ch9_2.cpp)
#find_package(osgGA REQUIRED)
#link_to_library(ch9_2 OSGGA)
#link_to_library(ch9_2 OPENTHREADS)
#link_to_library(ch9_2 OSG)
#link_to_library(ch9_2 OSGDB)
#link_to_library(ch9_2 OSGUTIL)
#link_to_library(ch9_2 OSGVIEWER)

#add_executable(ch9_3 ch9_3.cpp)
#link_to_library(ch9_3 OPENTHREADS)
#link_to_library(ch9_3 OSG)
#link_to_library(ch9_3 OSGDB)
#link_to_library(ch9_3 OSGUTIL)
#link_to_library(ch9_3 OSGVIEWER)

add_executable(ch9_4 ch9_4.cpp)
link_to_library(ch9_4 OPENTHREADS)
link_to_library(ch9_4 OSG)
link_to_library(ch9_4 OSGDB)
link_to_library(ch9_4 OSGUTIL)
link_to_library(ch9_4 OSGVIEWER)

#add_executable(ch9_5 ch9_5.cpp)
#link_to_library(ch9_5 OPENTHREADS)
#link_to_library(ch9_5 OSG)
#link_to_library(ch9_5 OSGDB)
#link_to_library(ch9_5 OSGUTIL)
#link_to_library(ch9_5 OSGVIEWER)
